<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_book_list"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_book_list"/>

        <item
            android:id="@+id/nav_my_library"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_my_library"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings"/>

    </group>
</menu>